// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label label: 0 1`] = `
<label
  className="label"
>
  Label
</label>
`;

exports[`label label: 1 1`] = `
<legend
  className="label"
>
  Legend label
</legend>
`;

exports[`label label: 2 1`] = `
<label
  className="hidden_label"
>
  Hidden label for screen readers
</label>
`;
